<resources>
    <string name="app_name">project5</string>

    <string-array name="specialty_pizzas">
        <item>Challenge</item>
        <item>Cheesesteak</item>
        <item>Deluxe</item>
        <item>Hawaiian</item>
        <item>Meatzza</item>
        <item>Pepperoni</item>
        <item>Seafood</item>
        <item>Supreme</item>
        <item>SurfNTurf</item>
        <item>Vegetarian</item>
    </string-array>

    <string-array name="toppings">
        <item>Toppings: Black Olive, Crab Meats, Pineapple</item>
        <item>Toppings: Green Pepper, Onion, Jalapeno, Beef</item>
        <item>Toppings: Sausage, Pepperoni, Green Pepper, Onion, Mushroom</item>
        <item>Toppings: Ham, Pineapple</item>
        <item>Toppings: Sausage, Pepperoni, Beef, Ham</item>
        <item>Toppings: Pepperoni</item>
        <item>Toppings: Shrimp, Squid, Crab Meats</item>
        <item>Toppings: Sausage, Pepperoni, Ham, Green Pepper, Onion, Black Olive, Mushroom</item>
        <item>Toppings: Squid, Beef, Shrimp, Sausage</item>
        <item>Toppings: Green Pepper, Onion, Mushroom, Black Olive, Jalapeno</item>
    </string-array>

    <string-array name="sauces">
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Alfredo</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Alfredo</item>
        <item>Sauce: Tomato</item>
    </string-array>

    <string name="rupizza">RU Pizza</string>
    <string name="specialty_pizzas">Specialty Pizzas</string>
    <string name="create_your_own">Create Your Own</string>
    <string name="current_order">Current Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="blank">grr</string>
    <string name="back_to_main">Back to Main</string>
    <string name="title1">Order Specialty Pizzas</string>
    <string name="sauce">Sauce</string>
    <string name="toppings">Toppings</string>
    <string name="size">Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="price">Price = </string>
    <string name="add_to_order">Add to Order</string>
    <string name="order_number">Order Number: </string>
    <string name="order_total">Order Total: </string>
    <string name="cancel_order">Cancel Order</string>
    <string name="title2">Order Details</string>
    <string name="subtotal">Subtotal: </string>
    <string name="sales_tax">Sales Tax: </string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="title3">Customize Your Pizza</string>
    <string name="tomato">Tomato</string>
    <string name="alfredo">Alfredo</string>
    <string name="sausage">Sausage</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="ham">Ham</string>
    <string name="beef">Beef</string>
    <string name="shrimp">Shrimp</string>
    <string name="squid">Squid</string>
    <string name="crab">Crab Meats</string>
    <string name="green_pepper">Green Pepper</string>
    <string name="onion">Onion</string>
    <string name="mushy">Mushroom</string>
    <string name="black_olive">Black Olive</string>
    <string name="ooospicy">Jalepeno</string>
    <string name="thebesttoppingshhhh">Pineapple</string>
    <string name="quantity">Quantity: </string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>