<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eadac0"
              android:orientation="vertical"
              android:weightSum="2">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/title3"
            android:ems="10"
            android:textSize="30sp"
            android:fontFamily="serif"
            android:background="#c32105"
            android:textColor="#ffffff"
            android:id="@+id/specialtypizzaactivitytitle"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2" android:baselineAligned="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" tools:ignore="NestedWeights">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <TextView
                        android:text="@string/size"
                        android:textSize="30sp"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content" android:id="@+id/textView3"
                        android:layout_gravity="center"/>
                <RadioGroup
                        android:id="@+id/customize_size_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <RadioButton
                            android:text="@string/small"
                            android:textSize="30sp"
                            android:layout_width="175dp"
                            android:layout_height="50dp" android:id="@+id/size_small"
                            android:layout_gravity="center"/>
                    <RadioButton
                            android:text="@string/medium"
                            android:textSize="30sp"
                            android:layout_width="175dp"
                            android:layout_height="50dp" android:id="@+id/size_medium"
                            android:layout_gravity="center"/>
                    <RadioButton
                            android:text="@string/large"
                            android:textSize="30sp"
                            android:layout_width="175dp"
                            android:layout_height="50dp" android:id="@+id/size_large"
                            android:layout_gravity="center"/>
                </RadioGroup>
            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="241dp"
                android:layout_marginTop="10dp">
                <TextView
                        android:text="@string/sauce"
                        android:textSize="30sp"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content" android:id="@+id/textView"
                        android:layout_gravity="center"/>
                <RadioGroup
                        android:id="@+id/customize_sauce_group"
                        android:layout_width="match_parent"
                        android:layout_height="105dp">
                    <RadioButton
                            android:text="@string/tomato"
                            android:textSize="20sp"
                            android:layout_width="175dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="15dp"
                            android:id="@+id/tomato"/>
                    <RadioButton
                            android:text="@string/alfredo"
                            android:textSize="20sp"
                            android:layout_width="181dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:id="@+id/alfredo"/>
                </RadioGroup>
                <CheckBox
                        android:text="@string/extra_cheese"
                        android:textSize="20sp"
                        android:layout_width="175dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:id="@+id/custom_extra_cheese"/>
                <CheckBox
                        android:text="@string/extra_sauce"
                        android:textSize="20sp"
                        android:layout_width="175dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:id="@+id/custom_extra_sauce"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="250dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/customize_toppings_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/sausage"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/sausage" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pepperoni"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pepperoni" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ham"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ham" />

            <com.google.android.material.chip.Chip
                android:id="@+id/beef"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beef" />

            <com.google.android.material.chip.Chip
                android:id="@+id/shrimp"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/shrimp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/squid"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/squid" />

            <com.google.android.material.chip.Chip
                android:id="@+id/crabmeats"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crab" />

            <com.google.android.material.chip.Chip
                android:id="@+id/greenpepper"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/green_pepper" />

            <com.google.android.material.chip.Chip
                android:id="@+id/onion"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onion" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Mushroom"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mushy" />

            <com.google.android.material.chip.Chip
                android:id="@+id/blackolive"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/black_olive" />

            <com.google.android.material.chip.Chip
                android:id="@+id/jalepeno"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ooospicy" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pineapple"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thebesttoppingshhhh" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/price"
                    android:textSize="45sp" />

                <TextView
                    android:id="@+id/customPrice"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="45sp" />
            </LinearLayout>

            <Button
                android:id="@+id/customizeAddToOrderButton"
                android:layout_width="178dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:enabled="false"
                android:text="@string/add_to_order" />

            <Button
                android:id="@+id/backtomain_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#ae7a47"
                android:text="@string/back_to_main" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>