<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eadac0"
              android:orientation="vertical"
              android:weightSum="2">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/title1"
            android:ems="10"
            android:textSize="30sp"
            android:fontFamily="serif"
            android:background="#740005"
            android:textColor="#ffffff"
            android:id="@+id/specialtypizzaactivitytitle"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2" android:baselineAligned="false">

        <ImageView
                android:id="@+id/pageImageView"
                android:layout_width="83dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/createyourownpizza" tools:ignore="NestedWeights"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pagePizzaTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/specialty_pizzas"
                android:textSize="30sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/pagePizzaSauce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/sauce"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/pagePizzaToppings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/toppings"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2" android:baselineAligned="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="242dp"
                android:layout_weight="1" tools:ignore="NestedWeights">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="244dp">
                <TextView
                        android:text="@string/size"
                        android:textSize="30sp"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content" android:id="@+id/textView3"
                        android:layout_gravity="center"/>
                <RadioGroup
                        android:id="@+id/specialty_size_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="183dp">
                    <RadioButton
                            android:id="@+id/small"
                            android:text="@string/small"
                            android:textSize="20sp"
                            android:layout_width="175dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center"/>
                    <RadioButton
                            android:id="@+id/medium"
                            android:text="@string/medium"
                            android:textSize="20sp"
                            android:layout_width="175dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center"/>
                    <RadioButton
                            android:id="@+id/large"
                            android:text="@string/large"
                            android:textSize="20sp"
                            android:layout_width="175dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center"/>
                </RadioGroup>
            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="241dp"
                android:layout_weight="1">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="241dp">
                <CheckBox
                        android:text="@string/extra_cheese"
                        android:textSize="20sp"
                        android:layout_width="175dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:id="@+id/specialty_extra_cheese"/>
                <CheckBox
                        android:text="@string/extra_sauce"
                        android:textSize="20sp"
                        android:layout_width="175dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:id="@+id/specialty_extra_sauce"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="3" android:baselineAligned="true">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="83dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="109dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/price"
                        android:textSize="45sp" />

                    <TextView
                        android:id="@+id/specialtyPizzaPrice"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text=""
                        android:textAlignment="center"
                        android:textSize="45sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/specialtyAddToOrderButton"
                    android:layout_width="217dp"
                    android:layout_height="68dp"
                    android:layout_gravity="center"
                    android:text="@string/add_to_order"
                    android:enabled="false"/>

                <Button
                    android:id="@+id/backtomain_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#ae7a47"
                    android:text="@string/back_to_main" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>