<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eadac0"
              android:orientation="vertical"
              android:weightSum="2">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/store_orders"
            android:ems="10"
            android:textSize="30sp"
            android:fontFamily="serif"
            android:background="#444801"
            android:textColor="#ffffff"
            android:id="@+id/specialtypizzaactivitytitle"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="69dp">
        <TextView
                android:text="@string/order_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginStart="30dp"
                android:id="@+id/textView2" android:layout_weight="1"/>
        <Spinner
                android:id="@+id/storeOrderSpinner"
                android:layout_height="50dp"
                android:layout_width="185dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>

    <ListView
        android:id="@+id/storeOrderList"
        android:layout_width="match_parent"
        android:layout_height="439dp" />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:layout_marginTop="30dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
            <TextView
                    android:text="@string/order_total"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:textSize="30sp" android:id="@+id/textView6"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:textSize="30sp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/editTextNumber2" android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/cancelOrderButton"
            android:layout_width="266dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:backgroundTint="#740005"
            android:text="@string/cancel_order" />
        <Button
            android:id="@+id/backtomain_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#ae7a47"
            android:text="@string/back_to_main" />
    </LinearLayout>
</LinearLayout>